Use query string over ID for insights display
Query string will also be used in the search autocomplete output.

--- a/admin/app/views/workarea/admin/insights/_cold_searches.html.haml
+++ b/admin/app/views/workarea/admin/insights/_cold_searches.html.haml
@@ -16,7 +16,7 @@
             %td.align-center
               = form_tag search_customizations_path, method: 'post' do
                 = hidden_field_tag 'q', result.query_id, id: nil
-                = button_tag result.query_id, class: 'button button--small'
+                = button_tag result.query_string, class: 'button button--small'
             %td.align-center
               - unless result.previous_week_revenue.zero?
                 %strong= number_to_currency(result.revenue_change)
