--- a/admin/app/views/workarea/admin/content_assets/edit.html.haml
+++ b/admin/app/views/workarea/admin/content_assets/edit.html.haml
@@ -24,9 +24,14 @@
           = text_field_tag 'asset[name]', @asset.name, class: 'text-box'
 
         .property
-          = label_tag 'asset_tag_list', t('workarea.admin.fields.tags'), class: 'property__name'
+          = label_tag 'asset_tag_list', class: 'property__name' do
+            %span= t('workarea.admin.fields.tags')
+            = link_to '#tags-info', data: { tooltip: '' } do
+              = inline_svg('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue')
           = text_field_tag 'asset[tag_list]', @asset.tag_list, class: 'text-box'
           %span.property__note=  t('workarea.admin.content_assets.edit.tags_note')
+
+          #tags-info.tooltip-content= t('workarea.admin.content_assets.edit.tags_tooltip_html')
 
         .grid.grid--huge
           .grid__cell.grid__cell--50-at-medium
