--- a/admin/app/assets/stylesheets/workarea/admin/application.scss.erb
+++ b/admin/app/assets/stylesheets/workarea/admin/application.scss.erb
@@ -141,6 +141,7 @@
 @import 'workarea/admin/components/dashboard_graphs';
 @import 'workarea/admin/components/jump_to_menu';
 @import 'workarea/admin/components/chart_legend';
+@import 'workarea/admin/components/timeline_report';
 <%= append_stylesheets('admin.components') %>
 
 @import 'workarea/admin/trumps/break_word';
