--- a/admin/app/assets/stylesheets/workarea/admin/settings/_grid.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/settings/_grid.scss
@@ -19,6 +19,7 @@ $av-enable-grid-right:  true;
 $av-enable-grid-flush:  true;
 $av-enable-grid-auto:   true;
 $av-enable-grid-middle: true;
+$av-enable-grid-tiny:   true;
 $av-enable-grid-large:  true;
 $av-enable-grid-huge:   true;
 $av-enable-grid-rev:    true;
