--- a/admin/app/views/layouts/workarea/admin/application.html.haml
+++ b/admin/app/views/layouts/workarea/admin/application.html.haml
@@ -120,6 +120,8 @@
                   %li.menu__item= link_to t('workarea.admin.layout.alert.inconsistent_variant_details', product: "#{pluralize(@alerts.products_inconsistent_variant_details, t('workarea.admin.layout.alert.product'))}"), catalog_products_path(issues: [t('workarea.alerts.issues.inconsistent_variant_details')]), class: 'menu__link'
                 - @alerts.empty_upcoming_releases.each do |release|
                   %li.menu__item= link_to t('workarea.admin.layout.alert.publishes_on_and_has_no_changes', release_name: release.name, release_publish_date: release.publish_at.to_date.to_s(:long)), release_path(release) , class: 'menu__link'
+                - if @alerts.workarea_version_outdated?
+                  %li.menu__item= link_to t('workarea.admin.layout.alert.workarea_version_outdated'), workarea_release_notes_url(@alerts.latest_workarea_version), class: 'menu__link'
 
           .header__action
             %button#help_menu{ type: 'button', class: 'header__action-link', data: { tooltip: { menu: true, content_id: '#help', interactive: true, arrow: false, distance: 0, multiple: false, trigger: 'hover' }.to_json, turbolinks: false } }
