--- a/admin/app/views/workarea/admin/content_blocks/_asset.html.haml
+++ b/admin/app/views/workarea/admin/content_blocks/_asset.html.haml
@@ -22,9 +22,10 @@
       .asset-picker-field__cell= button_tag t('workarea.admin.content_blocks.asset.clear_asset'), type: 'button', value: 'clear_asset', id: nil, class: 'text-button text-button--destroy', data: { asset_picker_field_clear: '' }
 
   %span.property__note
-    = t('workarea.admin.content_blocks.asset.alt_text_note')
     - if asset.alt_text.present?
-      %strong= "(#{asset.alt_text})"
+      = t('workarea.admin.content_blocks.asset.alt_text_note_html', text: asset.alt_text)
+    - else
+      = t('workarea.admin.content_blocks.asset.no_default_alt_text')
 
 - if field.tooltip.present?
   .tooltip-content{ id: "#{dom_id(block, field.slug)}_tooltip" }
