--- a/admin/app/views/workarea/admin/search_customizations/index.html.haml
+++ b/admin/app/views/workarea/admin/search_customizations/index.html.haml
@@ -53,7 +53,7 @@
                 = comments_icon_for(customization)
                 = top_icon_for(customization)
                 = trending_icon_for(customization)
-                = segments_icon_for(customization)
+                = segments_icons_for(customization)
               %td= link_to customization.query, search_customization_path(customization)
               %td.align-center= t("workarea.admin.#{customization.redirect?}")
               %td.align-center= t("workarea.admin.#{customization.rewrite?}")
