--- a/admin/app/views/workarea/admin/pricing_discounts/_cards.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/_cards.html.haml
@@ -15,7 +15,7 @@
             %li
               %strong #{t('workarea.admin.fields.active')}:
               = check_box_tag 'discount', 'active', model.active, disabled: true
-              = inline_svg('workarea/admin/icons/user.svg', class: 'svg-icon svg-icon--small svg-icon--blue') if model.active? && model.segments.any?
+              = segments_icons_for(model)
             %li
               %strong #{t('workarea.admin.fields.redemptions')}:
               = model.redemptions.size
