--- a/admin/app/views/workarea/admin/pricing_discounts/edit.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/edit.html.haml
@@ -30,11 +30,22 @@
           = text_field_tag  'discount[tag_list]', @discount.tag_list, class: 'text-box'
           %span.property__note= t('workarea.admin.form.csv_field_note')
 
-        .property
-          %span.property__name
-            = t('workarea.admin.fields.active')
-            = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
-          = toggle_button_for 'discount[active]', @discount.active?
+        .grid
+          .grid__cell.grid__cell--50.grid__cell--25-at-medium
+            .property
+              %span.property__name
+                = t('workarea.admin.fields.active')
+                = inline_svg('workarea/admin/i18n.svg', class: 'svg-icon svg-icon--small') if locale_options.many? && Workarea.config.localized_active_fields
+              = toggle_button_for 'discount[active]', @discount.active?
+          .grid__cell.grid__cell--50.grid__cell--25-at-medium
+            .property
+              %span.property__name
+                = t('workarea.admin.fields.auto_deactivate')
+                = link_to '#auto-deactivate-info', data: { tooltip: '' } do
+                  = inline_svg('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue')
+              = toggle_button_for 'discount[auto_deactivate]', @discount.auto_deactivate?
+
+            #auto-deactivate-info.tooltip-content= t('workarea.admin.pricing_discounts.edit.auto_deactivate_info', duration: duration_in_words(Workarea.config.discount_staleness_ttl))
 
         .grid
           .grid__cell.grid__cell--33.grid__cell--25-at-medium
