Clean up Timeline Report Chart
QA uncovered some weirdness, namely:

* Stop Orders from being active by default
* Stop bubbling of the events triggered from within the tooltip
* Order events by time when many are displayed within the same day
* Display Events in graph above other data sets
* Fix tooltip functionality browsers other than Chrome

No changelog

WORKAREA-86

--- a/admin/app/views/workarea/admin/reports/timeline.html.haml
+++ b/admin/app/views/workarea/admin/reports/timeline.html.haml
@@ -54,7 +54,7 @@
               - else
                 %ol.list-reset
                   - @report.events.each do |date, events|
-                    %li.timeline-report__event-group{ data: { timeline_report_chart_event: date.to_time } }
+                    %li.timeline-report__event-group{ data: { timeline_report_chart_event: date.strftime('%Y|%m|%d').split('|') } }
                       %strong= date.strftime('%B %d, %Y')
                       %ul.timeline-report__events-list
                         - events.each do |event|
