--- a/admin/app/views/workarea/admin/activities/_destroy.html.haml
+++ b/admin/app/views/workarea/admin/activities/_destroy.html.haml
@@ -6,4 +6,4 @@
     %h3.activity__name= link_to_modifier(entry)
     %p.activity__time= activity_time(entry.created_at)
   .activity__message
-    = t('workarea.admin.activities.generic_destroy_html', model: activity_model_name(entry), id: entry.audited_id)
+    = t('workarea.admin.activities.generic_destroy_html', model: activity_model_name(entry))
