Restrict release datetimepicker to dates in the future
WORKAREA-65

--- a/admin/app/views/workarea/admin/create_releases/setup.html.haml
+++ b/admin/app/views/workarea/admin/create_releases/setup.html.haml
@@ -22,12 +22,12 @@
             .grid__cell.grid__cell--50-at-medium
               .property
                 = label_tag 'release_publish_at', t('workarea.admin.fields.publish_at'), class: 'property__name'
-                .box.box--rounded= hidden_field_tag 'release[publish_at]', @release.publish_at, data: { datetimepicker_field: { inline: true } }
+                .box.box--rounded= hidden_field_tag 'release[publish_at]', @release.publish_at, data: { datetimepicker_field: { inline: true, uiOptions: { minDate: 0 } }.to_json }
 
             .grid__cell.grid__cell--50-at-medium
               .property
                 = label_tag 'release_undo_at', t('workarea.admin.fields.undo_at'), class: 'property__name'
-                .box.box--rounded= hidden_field_tag 'release[undo_at]', nil, data: { datetimepicker_field: { inline: true } }
+                .box.box--rounded= hidden_field_tag 'release[undo_at]', nil, data: { datetimepicker_field: { inline: true, uiOptions: { minDate: 0 } }.to_json }
 
         .property
           = label_tag 'release[tag_list]', t('workarea.admin.fields.tags'), class: 'property__name'
